Add /users endpoint
